# panelvar

./: .Rhistory  .gitignore  MANIFEST.in  Main.py  output.html  png.7z  pyproject.toml  residual.csv  setup.py  test.R
panelvar/: model_summary.py  regression.py
panelvar.egg-info/: PKG-INFO  SOURCES.txt
pypvar/: CPP_Project.7z  irf.py  regression.py
src/: .clang-format  CMakeLists.txt  CMakeLists_old.txt  Command.cpp  Command.h  Common_Functions.cpp  Common_Functions.h  GMM.cpp  GMM.h  IRF.cpp  IRF.h  List_Variables.cpp  List_Variables.h  Specification_Test.cpp  Specification_Test.h  Step_Result.cpp  Step_Result.h  dynamic_model.cpp  dynamic_model.h  info.cpp  info.h  instruments.cpp  instruments.h  model_organizer.cpp  model_organizer.h  pvar.h  variable.cpp  variable.h  wrap.cpp
